ubiquity (2.2.10) lucid; urgency=low

  * Fix the default language selection for when only-show-installable-languages
    is set to true.
  * Use the file object's close function rather than os.close in
    DebconfInstallProgress. (LP: #549478)
  * Hide the currently active progress window when switching to the new progress
    window.
  * Sync the title of the install progress window in automatic mode.
  * In both of the gtk progress windows, don't show minimize or close buttons in
    only mode.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Fri, 26 Mar 2010 16:45:50 -0500

ubiquity (2.2.9) lucid; urgency=low

  [ Evan Dandrea ]
  * Correctly feed the calculated keyboard layout back to the running
    component.  This has the side benefit of the calculated layout
    getting selected in the treeviews (LP: #521831).
  * Don't try to import the GTK LabelledEntry widget in the KDE frontend
    (LP: #546792).
  * Disable the context menu in the slideshow frame.  Thanks Dylan
    McCall!
  * Make sure the user we're not processing events before we've set up
    the language list in the KDE frontend (LP 528678).
  * Don't try to translate the greeter with the C locale.
  * Don't destroy the main window when the close button is pressed
    (LP: #543775).
  * Properly handle exceptions around opening the release_notes_url file
    in the KDE frontend (LP: #540266).  Hide the label if the release notes
    do not exist.
  * Handle window manager buttons properly in greeter mode
    (LP 539827).
  * Update DebconfInstallProgress for changes to python-apt
    (LP: #546889).
  * Make labels unselectable now that we're in beta, per foundations-
    lucid-installer-design-improvements.
  * Make the quit warning dialog transient for the main window (modal).
  * Automatic update of included source packages: console-setup
    1.34ubuntu13, grub-installer 1.49ubuntu9, partman-base 139ubuntu2.

  [ Colin Watson ]